# aoc2022

./: .gitignore  dune  dune-project  get_input.py
lib/: aoc.ml  dune
